2018-09-26 09:22  jmc

	* lib/libutil/imsg_init.3: explicitly mention local processes; from
	  geoff hill ok nicm

2018-02-16 07:42  nicm

	* lib/libutil/imsg_init.3: Fix function argument names, from Abel
	  Abraham Camarillo Ojeda via jmc@.

2017-12-14 09:27  kettenis

	* lib/libutil/: imsg-buffer.c, imsg.c: Make a few internal symbols
	  static and add a Symbols.map version script to control which
	  symbols are exported from the shared library.

	  ok guenther@, deraadt@, jca@

2017-12-06 12:07  zhuk

	* lib/libutil/imsg_init.3: It's the imsg_compose(3) who accepts
	  'fd' argument, not imsg_create(3).

2017-05-03 15:49  reyk

	* lib/libutil/imsg_init.3: spacing (in EXAMPLES code)

2017-04-11 09:57  reyk

	* lib/libutil/: imsg-buffer.c, imsg.c: Use freezero(3) for the imsg
	  framework in imsg_free(3) and ibuf_free(3).

	  In our privsep model, imsg is often used to transport sensitive
	  information between processes.  But a process might free an imsg,
	  and reuse the memory for a different thing.  iked uses some
	  explicit_bzero() to clean imsg-buffer but doing it in the library
	  with the freezero() is less error-prone and also benefits other
	  daemons.

	  OK deraadt@ jsing@ claudio@

2017-03-24 09:34  nicm

	* lib/libutil/: imsg.c, imsg.h, imsg_init.3: Use C99 types
	  (uint32_t) instead of BSD (u_int32_t) - the former are more
	  portable. Add stdint.h to the headers in imsg_init(3).

	  No objections from millert@.

2017-03-17 14:51  deraadt

	* lib/libutil/imsg-buffer.c: Grow buffers using recallocarray, to
	  avoid the potential dribble that the standard realloc*()
	  functions can leave behind.  imsg buffers are sometimes used in
	  protocol stacks which require some secrecy, and layering
	  violations would be needed to resolve this issue otherwise.
	  Discussed with many.

2017-03-06 18:44  otto

	* lib/libc/stdlib/recallocarray.c: Introducing recallocarray(3), a
	  blend of calloc(3) and reallocarray(3) with the added feature